# mcp-vmware

./: .dockerignore  .editorconfig  .gitignore  .mcp.json  .vcenter.env.example  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Containerfile  GOVERNANCE.md  LICENSE  README.md  SECURITY.md  SUPPORT.md  deploy.sh  pyproject.toml  requirements-build.in  requirements-ci.txt  requirements-container.txt  run.sh
.github/: CODEOWNERS  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  scorecard.yml
api-map/: coverage.yaml
api-map/8.0.3-25092719/: SUMMARY.md  meta.json  rest.json  vim25.json
docs/: roles.md
src/mcp_vmware/: __init__.py  __main__.py  app.py  connection.py  helpers.py  roles.py  server.py  tools_cluster.py  tools_host.py  tools_host_config.py  tools_read.py  tools_write.py
tests/: __init__.py  conftest.py  test_helpers.py  test_properties.py  test_roles.py  test_server_registration.py  test_write_gates.py
tools/: build_api_map.py
