[project]
name = "mcp-vmware"
version = "0.1.0"
description = "MCP server to pilot VMware vCenter (vSphere 8) via pyvmomi"
requires-python = ">=3.12"
dependencies = [
    "mcp>=1.2.0",
    "pyvmomi>=8.0.0",
]

[project.optional-dependencies]
dev = ["pytest>=8", "ruff", "mypy", "hypothesis>=6"]

[project.scripts]
mcp-vmware = "mcp_vmware.server:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = false
ignore_missing_imports = true

# The stubs bundled with pyvmomi are incomplete (attributes present at runtime
# but missing from the annotations): treat vim/vmodl as untyped.
[[tool.mypy.overrides]]
module = ["pyVmomi", "pyVmomi.*", "pyVim", "pyVim.*"]
follow_imports = "skip"

[tool.pytest.ini_options]
testpaths = ["tests"]
